2021-05-10  Chris Dumez  <cdumez@apple.com>

        [ macOS Release wk2 ] http/tests/cache-storage/cache-records-persistency.https.html is flaky crashing
        https://bugs.webkit.org/show_bug.cgi?id=225522
        <rdar://problem/77680019>

        Reviewed by Darin Adler.

        Pass ec parameter to std::filesystem::directory_iterator() so that it doesn't throw in case of the
        path does not exist. Normally, the function would return early earlier if the path does not exist
        or isn't a directory. However, in the context of the test, this function is getting called on a
        background thread and another thread is deleting the directory in parallel.

        * wtf/FileSystem.cpp:
        (WTF::FileSystemImpl::deleteEmptyDirectory):

2021-05-10  Devin Rousso  <drousso@apple.com>

        `SLEEP_THREAD_FOR_DEBUGGER` should print the PID before sleeping
        https://bugs.webkit.org/show_bug.cgi?id=225619

        Reviewed by Tim Horton.

        * wtf/DebugUtilities.h:

2021-05-10  Rob Buis  <rbuis@igalia.com>

        Implement <form>.requestSubmit()
        https://bugs.webkit.org/show_bug.cgi?id=197958

        Reviewed by Darin Adler.

        Add requestSubmit as experimental feature, disabled by default.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2021-05-09  Darin Adler  <darin@apple.com>

        Remove uses of the String::toInt family of functions from WebCore/html and similar directories
        https://bugs.webkit.org/show_bug.cgi?id=225577

        Reviewed by Sam Weinig.

        * wtf/text/StringBuilder.h: Added conversion operator to make a StringView, built on the exiting
        is8Bit, characters8, characters16 and length functions. Removed now-uneeded equal function and
        == and != operators since the StringView ones work for those same cases with the same syntax.

2021-05-08  Darin Adler  <darin@apple.com>
