@@ -962,3 +962,7 @@
 #if PLATFORM(IOS) || PLATFORM(MACCATALYST)
 #define HAVE_UIBLUREFFECT_STYLE_SYSTEM_MATERIAL 1
 #endif
+
+#if PLATFORM(COCOA) && !(PLATFORM(IOS) && __IPHONE_OS_VERSION_MIN_REQUIRED < 150000)
+#define HAVE_SYSTEM_SANDBOXES_ALLOWING_TERMINATE_WITH_REASON 1
+#endif
