@@ -1,3 +1,12 @@
+2021-05-11  Alex Christensen  <achristensen@webkit.org>
+
+        Remove xpc_connection_kill
+        https://bugs.webkit.org/show_bug.cgi?id=225602
+
+        Reviewed by Alexey Proskuryakov.
+
+        * wtf/PlatformHave.h:
+
 2021-05-10  Chris Dumez  <cdumez@apple.com>
 
         [ macOS Release wk2 ] http/tests/cache-storage/cache-records-persistency.https.html is flaky crashing
